--- a/Web/src/main/webapp/WEB-INF/views/record.jspx
+++ b/Web/src/main/webapp/WEB-INF/views/record.jspx
@@ -4,7 +4,12 @@
           xmlns:form="http://www.springframework.org/tags/form"
           xmlns:c="http://java.sun.com/jsp/jstl/core"
           xmlns:spring="http://www.springframework.org/tags">
-
+    <script src="https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=fd8ws6vtoqf09dztb73e9mrus71x54jo44otdz93vwn3vack">&amp;nbsp;</script>
+    <script>
+        tinymce.init({
+            selector: '#body'
+        });
+    </script>
     <div class="container">
         <div class="col-md-12">
             <div class="page-header"><h1>${pageHeader}</h1></div>
