--- a/Web/src/main/webapp/WEB-INF/views/user.jspx
+++ b/Web/src/main/webapp/WEB-INF/views/user.jspx
@@ -2,7 +2,8 @@
           xmlns="http://www.w3.org/1999/xhtml"
           xmlns:jsp="http://java.sun.com/JSP/Page"
           xmlns:form="http://www.springframework.org/tags/form"
-          xmlns:spring="http://www.springframework.org/tags" xmlns:c="http://java.sun.com/jsp/jstl/core">
+          xmlns:spring="http://www.springframework.org/tags"
+          xmlns:c="http://java.sun.com/jsp/jstl/core">
 
     <div class="row">
         <div class="container">
@@ -31,8 +32,7 @@
                         </div>
                     </div>
                     <div class="form-group ${firstNameClass}">
-                        <form:label for="firstName" path="firstName"
-                                    class="col-sm-3 control-label"><spring:message code="register.form.label.firstname"/></form:label>
+                        <form:label for="firstName" path="firstName" class="col-sm-3 control-label"><spring:message code="register.form.label.firstname"/></form:label>
                         <div class="col-sm-9">
                             <form:input type="text" id="firstName" path="firstName" class="form-control" placeholder="enter first name"/>
                             <span class="help-block"><form:errors path="firstName"/></span>
