--- a/Web/src/main/webapp/WEB-INF/common/header.jspx
+++ b/Web/src/main/webapp/WEB-INF/common/header.jspx
@@ -40,7 +40,7 @@
             </div>
         </div>
     </nav>
-    <!--@elvariable id="alert" type="com.criticalgnome.blog.utils.Alert"-->
+    <!--@elvariable id="alert" type="com.criticalgnome.blog.entities.Alert"-->
     <c:if test="${not empty alert}">
         <div class="container">
             <div class="col-md-4 col-md-offset-4">
