--- a/Web/src/main/webapp/WEB-INF/views/login.jspx
+++ b/Web/src/main/webapp/WEB-INF/views/login.jspx
@@ -6,8 +6,8 @@
           xmlns:c="http://java.sun.com/jsp/jstl/core">
 <jsp:output omit-xml-declaration="true"/>
 <jsp:directive.page pageEncoding="UTF-8" contentType="text/html; UTF-8"/>
-    
-    <!--@elvariable id="alert" type="com.criticalgnome.blog.utils.Alert"-->
+
+    <!--@elvariable id="alert" type="com.criticalgnome.blog.entities.Alert"-->
     <c:if test="${param.error != null}">
         <div class="container">
             <div class="col-md-4 col-md-offset-4">
